# esbonio

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  flake.nix
code/: .bumpversion.cfg  .gitignore  .vscodeignore  CHANGELOG.md  CHANGES.rst  LICENSE  Makefile  README.md  esbuild.mjs  hatch.toml  package-lock.json  package.json  pyproject.toml  requirements-env.in  requirements-env.txt  requirements-libs.in  requirements-libs.txt  requirements.in  requirements.txt  rst-language-configuration.json  tox.ini  tsconfig.base.json  tsconfig.json  webpack.config.js
code/changes/: 10.misc.rst  118.feature.rst  119.misc.rst  12.feature.rst  120.feature.rst  121.fix.rst  122.feature.rst  123.fix.rst  124.fix.rst  125.feature.rst  126.fix.rst  127.fix.rst  128.fix.rst  133.misc.rst  135.misc.rst  138.fix.rst  140.fix.rst  141.fix.rst  142.feature.rst  152.misc.rst  16.misc.rst  168.fix.rst  17.misc.rst  170.misc.rst  176.enhancement.rst  18.misc.rst  183.fix.rst  190.feature.rst  192.misc.rst  194.feature.rst  203.fix.rst  204.fix.rst  205.feature.rst  214.fix.rst  217.misc.rst  224.enhancement.rst  239.enhancement.rst  240.enhancement.rst  241.enhancement.rst  252.fix.rst  (+92 more)
code/guides/: bring-your-own-sphinx.md  example-commands.md
code/src/: commands.ts  constants.ts  editor.ts  extension.ts  language-server.ts  languageServer.ts  log.ts  webextension.ts
code/src/browser/: extension.ts  tsconfig.json
code/src/browser/core/: log.ts
code/src/browser/lsp/: client.ts  server.py  worker.ts
code/src/common/: config.ts  constants.ts  log.ts
code/src/lsp/: client.ts  python.ts  server.py  server.ts  status.ts
code/src/node/: client.ts  constants.ts  extension.ts  preview.ts  processTreeView.ts  python-ext-api.ts  python.ts  status.ts  tsconfig.json  view.ts
code/src/node/core/: editor.ts  log.ts
code/src/node/lsp/: client.ts  python.ts  server.ts  status.ts
code/src/node/preview/: view.ts
code/src/node/test/: runTests.ts
code/src/preview/: view.ts
code/src/test/: mock.ts  runTests.ts  runUnitTests.ts  tsconfig.json
code/src/test/suite/: commands.test.ts  editor.test.ts  index.ts  language-server.test.ts
code/src/test/unit/: python.test.ts  server.test.ts
code/syntaxes/: esbonio-log-output.tmLanguage.json  rst.tmLanguage.json
code/syntaxes/tests/: _code.rst  _comments.rst  _directives.rst  _footnotes.rst  _inline-markup.rst  _links.rst  _roles.rst  _sections.rst  c.tmLanguage.json  code.rst  comments.rst  cpp.tmLanguage.json  css.tmLanguage.json  directives.rst  html.tmLanguage.json  inline-elements.rst  js.tmLanguage.json  json.tmLanguage.json  python.tmLanguage.json  sections.rst  ts.tmLanguage.json  yaml.tmLanguage.json
lib/esbonio/: .bumpversion.cfg  .gitignore  CHANGES.md  CHANGES.rst  MANIFEST.in  Makefile  README.md  flake.nix  hatch.toml  pyproject.toml  pyrightconfig.json  ruff.toml  ruff_defaults.toml  setup.cfg  tox.ini
lib/esbonio-extensions/: .bumpversion.cfg  CHANGES.rst  MANIFEST.in  README.md  hatch.toml  pyproject.toml  setup.cfg  tox.ini
lib/esbonio-extensions/changes/: 206.misc.rst  261.feature.rst  470.misc.rst  480.misc.rst  656.misc.md  879.misc.md  xxx.feature.rst
lib/esbonio-extensions/esbonio/: tutorial.py
lib/esbonio-extensions/esbonio/ext/: spelling.py
lib/esbonio-extensions/esbonio/relevant_to/: __init__.py  script.js
lib/esbonio-extensions/tests/: conftest.py  test_tutorial.py
lib/esbonio/changes/: 100.bug.rst  101.feature.rst  102.fix.rst  104.feature.rst  105.enhancement.md  106.feature.rst  11.misc.rst  113.feature.rst  114.feature.rst  115.feature.rst  139.fix.rst  142.feature.rst  144.misc.rst  147.fix.rst  158.fix.rst  166.fix.rst  169.fix.rst  171.fix.rst  178.fix.rst  179.fix.rst  180.fix.rst  184.fix.rst  185.misc.rst  191.fix.rst  192.misc.rst  193.misc.rst  195.misc.rst  208.fix.rst  209.feature.rst  211.fix.rst  212.fix.rst  213.fix.rst  215.fix.rst  218.misc.rst  223.fix.rst  23.feature.rst  24.misc.rst  242.feature.rst  244.fix.rst  246.fix.rst  (+152 more)
lib/esbonio/docs/: index.rst  tutorial.rst
lib/esbonio/esbonio/: __main__.py  cli.py  lsp.py  tutorial.py
lib/esbonio/esbonio/cli/: __init__.py  py.typed
lib/esbonio/esbonio/lsp/: __init__.py  completion.py  directives.py  feature.py  filepaths.py  initialize.py  intersphinx.py  log.py  logger.py  py.typed  roles.py  rst.py  server.py  spelling.py  sphinx.py  symbols.py  testing.py
lib/esbonio/esbonio/server/: __init__.py  __main__.py  _configuration.py  _log.py  _patterns.py  _uri.py  cli.py  events.py  feature.py  log.py  py.typed  server.py  setup.py  testing.py
lib/esbonio/esbonio/sphinx_agent/: __init__.py  __main__.py  app.py  config.py  database.py  handlers.py  log.py  patches.py  py.typed  server.py  transforms.py  types.py  util.py
lib/esbonio/nix/: esbonio-overlay.nix  esbonio.nix  pytest-lsp.nix
lib/esbonio/scripts/: generate_documentation.py
lib/esbonio/tests/: conftest.py  test_codeblocks.py  test_directives.py  test_document_symbols.py  test_filepaths.py  test_roles.py  test_sphinx.py  test_tutorial.py
lib/esbonio/tests/doctests/: example_directive_option_pattern.txt  example_directive_pattern.txt  example_directive_substitution_pattern.txt
lib/esbonio/tests/e2e/: conftest.py  test_e2e_diagnostics.py  test_e2e_directives.py  test_e2e_roles.py  test_e2e_symbols.py  test_sphinx_manager.py
lib/esbonio/tests/lsp/: test_completions.py  test_directives.py  test_filepaths.py  test_intersphinx.py  test_roles.py  test_server.py  test_sphinx.py
lib/esbonio/tests/server/: conftest.py  test_configuration.py  test_patterns.py  test_uri_class.py
lib/esbonio/tests/sphinx-agent/: conftest.py  test_sa_build.py  test_sa_create_app.py  test_sa_database.py  test_sa_diagnostics.py  test_sa_unit.py  test_sa_uri_class.py
lib/esbonio/tests/sphinx-default/: conftest.py  test_sd_code_actions.py  test_sd_directives.py  test_sd_roles.py  test_sd_sphinx.py  test_sd_sphinx_codeblocks.py  test_sd_sphinx_domains.py  test_sd_sphinx_images.py  test_sd_sphinx_includes.py  test_sd_sphinx_roles.py  test_sd_symbols.py
(+384 files in other folders)
