[project]
name = "esbonio-vscode"
dynamic = ["version"]

[tool.hatch.version]
path = "package.json"
pattern = "\\s*\"version\": \"(?P<version>[^\"]+)\""
validate-bump = false

[tool.towncrier]
filename = "CHANGES.rst"
directory = "changes/"
title_format = "v{version} - {project_date}"
issue_format = "`#{issue} <https://github.com/swyddfa/esbonio/issues/{issue}>`_"
underlines = ["-", "^", "\""]

type = [
    { name = "Breaking Changes", directory = "breaking", showcontent = true },
    { name = "Features", directory = "feature", showcontent = true },
    { name = "Enhancements", directory = "enhancement", showcontent = true },
    { name = "API Changes", directory = "api", showcontent = true },
    { name = "Fixes", directory = "fix", showcontent = true },
    { name = "Docs", directory = "doc", showcontent = true },
    { name = "Deprecated", directory = "deprecated", showcontent = true },
    { name = "Misc", directory = "misc", showcontent = true },
    { name = "Removed", directory = "removed", showcontent = true },
]
