[build-system]
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.towncrier]
filename = "CHANGES.rst"
directory = "changes/"
title_format = "v{version} - {project_date}"
issue_format = "`#{issue} <https://github.com/swyddfa/esbonio/issues/{issue}>`_"
underlines = ["-", "^", "\""]

type = [
  { name = "Features", directory = "feature", showcontent = true },
  { name = "Enhancements", directory = "enhancement", showcontent = true },
  { name = "Fixes", directory = "fix", showcontent = true },
  { name = "Docs", directory = "doc", showcontent = true },
  { name = "Breaking Changes", directory = "breaking", showcontent = true },
  { name = "Deprecated", directory = "deprecated", showcontent = true },
  { name = "Misc", directory = "misc", showcontent = true },
  { name = "Removed", directory = "removed", showcontent = true },
]
