[build-system]
requires = ["hatchling>=1.17.1"]
build-backend = "hatchling.build"

[project]
name = "esbonio-extensions"
dynamic = ["version"]
description = "A collection of extensions for Sphinx and the Esbonio language server"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Alex Carney", email = "alcarneyme@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Documentation",
  "Topic :: Documentation :: Sphinx",
]
dependencies = ["esbonio", "platformdirs", "sphinx"]

[project.optional-dependencies]
dev = ["black", "flake8", "pytest", "pytest-cov", "mock"]
spelling = ["pyspellchecker"]

[project.urls]
"Bug Tracker" = "https://github.com/swyddfa/esbonio/issues"
"Documentation" = "https://swyddfa.github.io/esbonio/"
"Source Code" = "https://github.com/swyddfa/esbonio"

[tool.check-wheel-contents]
ignore = ["W004"]

[tool.towncrier]
filename = "CHANGES.rst"
directory = "changes/"
title_format = "v{version} - {project_date}"
issue_format = "`#{issue} <https://github.com/swyddfa/esbonio/issues/{issue}>`_"
underlines = ["-", "^", "\""]

type = [
  { name = "Features", directory = "feature", showcontent = true },
  { name = "Enhancements", directory = "enhancement", showcontent = true },
  { name = "Fixes", directory = "fix", showcontent = true },
  { name = "Docs", directory = "doc", showcontent = true },
  { name = "Breaking Changes", directory = "breaking", showcontent = true },
  { name = "Deprecated", directory = "deprecated", showcontent = true },
  { name = "Misc", directory = "misc", showcontent = true },
  { name = "Removed", directory = "removed", showcontent = true },
]
