[metadata]
name = esbonio-extensions
version = 0.2.2
description = A collection of Sphinx extensions
long_description = file:README.md
long_description_content_type = text/markdown
author = Alex Carney
author_email = alcarneyme@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
platforms = any

[options]
python_requires = >=3.8
packages = find_namespace:
include_package_data = True
install_requires =
    esbonio
    platformdirs
    sphinx

[options.packages.find]
exclude = tests*

[options.extras_require]
dev = black ; flake8 ; pytest ; pytest-cov ; mock
spelling = pyspellchecker
tutorial = nbformat

[flake8]
max-line-length = 88
ignore = E501
