[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esbonio"
version = "0.16.2"
description = "A language server for sphinx/docutils based documentation projects."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Alex Carney", email = "alcarneyme@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
]
dependencies = ["appdirs", "docutils", "pygls>=1.1.0", "websockets"]

[project.urls]
"Bug Tracker" = "https://github.com/swyddfa/esbonio/issues"
"Documentation" = "https://swyddfa.github.io/esbonio/"
"Source Code" = "https://github.com/swyddfa/esbonio"

[project.scripts]
esbonio = "esbonio.server:main"
esbonio-sphinx = "esbonio.lsp.sphinx.cli:main"

[project.optional-dependencies]
test = ["pytest", "pytest-lsp>=0.3.1", "pytest-cov", "pytest-timeout"]
typecheck = [
    "mypy",
    "pytest-lsp>=0.3.1",
    "types-appdirs",
    "types-docutils",
    "types-pygments",
]
dev = ["black", "flake8", "pre-commit", "tox"]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.isort]
force_single_line = true
known_first_party = ["esbonio"]
profile = "black"

[tool.pytest.ini_options]
addopts = "--doctest-glob='*.txt'"
asyncio_mode = "auto"
filterwarnings = [
    "ignore:'contextfunction' is renamed to 'pass_context',*:DeprecationWarning",
    "ignore:'environmentfilter' is renamed to 'pass_environment',*:DeprecationWarning",
]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR"
explicit_package_bases = true
check_untyped_defs = true

[tool.towncrier]
filename = "CHANGES.rst"
directory = "changes/"
title_format = "v{version} - {project_date}"
issue_format = "`#{issue} <https://github.com/swyddfa/esbonio/issues/{issue}>`_"
underlines = ["-", "^", "\""]

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "enhancement"
name = "Enhancements"
showcontent = true

[[tool.towncrier.type]]
directory = "fix"
name = "Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "api"
name = "API Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
skip_missing_interpreters = true
envlist = py{38,39,310,311}, py{38,39,310,311}-sphinx{5,6,7}

[testenv]
package = wheel
wheel_build_env = .pkg
deps =
    git+https://github.com/openlawlibrary/pygls.git#egg=pygls
extras = test
commands =
    pytest tests/server {posargs}

[testenv:py{38,39,310,311}-sphinx{5,6,7}]
deps =
    sphinx5: sphinx>=5,<6
    sphinx6: sphinx>=6,<7
    sphinx7: sphinx>=7,<8
    git+https://github.com/openlawlibrary/pygls.git#egg=pygls
commands =
    python ../../scripts/check-sphinx-version.py
    pytest tests/sphinx-agent {posargs}

[testenv:pkg]
deps =
    build
skip_install = True
commands =
    python -m build
"""
