
[metadata]
name = esbonio
version = 0.15.0
description = A Language Server for Sphinx projects.
long_description = file:README.md
long_description_content_type = text/markdown
author = Alex Carney
author_email = alcarneyme@gmail.com
url = https://swyddfa.github.io/esbonio/
project_urls =
    Bug Tracker = https://github.com/swyddfa/esbonio/issues
    Documentation = https://swyddfa.github.io/esbonio/
    Source Code = https://github.com/swyddfa/esbonio
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
platforms = any

[options]
packages = find_namespace:
python_requires = >=3.7
include_package_data = True
install_requires =
    appdirs
    sphinx
    pygls>=0.11.0,<1.0 ; python_version<"3.11"
    pygls>=0.12.4,<1.0 ; python_version>="3.11"
    pyspellchecker
    typing-extensions


[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    esbonio = esbonio.__main__:main
    esbonio-sphinx = esbonio.lsp.sphinx.cli:main

[options.extras_require]
debug = lsp-devtools
test =
  lsp-devtools
  mock; python_version<"3.8"
  pytest
  pytest-lsp
  pytest-cov
  pytest-timeout
  mypy
  types-appdirs
  types-docutils
  types-pygments
dev =
  black
  flake8
  pre-commit
  tox

[flake8]
max-line-length = 88
ignore = E501,W503,E402,E203
