[metadata]
name = esbonio
version = 0.16.5
description = A Language Server for Sphinx projects.
long_description = file:README.md
long_description_content_type = text/markdown
author = Alex Carney
author_email = alcarneyme@gmail.com
url = https://docs.esbon.io/en/esbonio-language-server-v0.16.5/
project_urls =
    Bug Tracker = https://github.com/swyddfa/esbonio/issues
    Documentation = https://docs.esbon.io/en/esbonio-language-server-v0.16.5/
    Source Code = https://github.com/swyddfa/esbonio
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
platforms = any

[options]
packages = find_namespace:
python_requires = >=3.7
include_package_data = True
install_requires =
    sphinx
    platformdirs
    pygls>=1.1.0,<2
    pyspellchecker
    typing-extensions; python_version<"3.8"

[options.packages.find]
exclude = tests*

[options.entry_points]
console_scripts =
    esbonio = esbonio.__main__:main
    esbonio-sphinx = esbonio.lsp.sphinx.cli:main

[options.extras_require]
test =
  mock; python_version<"3.8"
  pytest
  pytest-lsp>=0.3.1
  pytest-asyncio<0.23
  pytest-cov
  pytest-timeout
typecheck =
  mypy
  pytest-lsp>=0.3.1
  types-appdirs
  types-docutils
  types-pygments
dev =
  black
  flake8
  pre-commit
  tox

[flake8]
max-line-length = 88
ignore = E501,W503,E402,E203
